Try to ensure content z-index is always below header (on IE)

--- a/app/assets/stylesheets/website/layout.scss
+++ b/app/assets/stylesheets/website/layout.scss
@@ -4,6 +4,8 @@
 @import "../shared/globals";
 
 #wrapper {
+  position: relative;
+  z-index: 10;
   background: #fff;
   max-width: 100%;
   min-height: 37em;
@@ -56,7 +58,7 @@
   img {
     width: 100%;
   }
-  
+
   a:hover {
     color: #7F7F7F;
   }
